--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "ansi-to-html": "^0.6.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-flow-renderer": "^9.0.1",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "start-flask": "cd flask-api && venv/bin/flask run -p 5124",
+    "sync-nodes": "cd src/Nodes && python generate_node_files.py",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
