--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.1",
     "react-flow-renderer": "^9.0.1",
     "react-scripts": "4.0.2",
+    "react-select": "^4.1.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
